# qtcolorwidgets

./: .travis.yml  CMakeLists.txt  README.md
docs/: README.md
src/: qtcolortriangle.h
